bluec-tests/tests/invalid/typedef/missing.c
int main(void) {
    foo x = 5;
    return x;
}
